tests/failures/fail-016-undefined-type.bas
''------------------------------------------------------------------------------
'' Test undefined type
''
'' CHECK: __FILE__:8:12: error: Undefined type 'BAR'
'' CHECK: dim foo as Bar
'' CHECK:            ^~~
''------------------------------------------------------------------------------
dim foo as Bar
